Salesforce/main/default/objects/Producto_Auditado__c/fields/Area_Plantada__c.field-meta.xml
<CustomField>
    <fullName>Area_Plantada__c</fullName>
    <label>Area Plantada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>