Salesforce/main/default/objects/Producto_Auditado__c/fields/Categoria_Oli__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Oli__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Categoria del producto de oportunidad</description>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Productos Auditados</relationshipLabel>
    <relationshipName>Productos_Auditados</relationshipName>
    <type>Lookup</type>
</CustomField>