Salesforce/main/default/objects/Producto_Auditado__c/fields/Comercializado__c.field-meta.xml
<CustomField>
    <fullName>Comercializado__c</fullName>
    <label>Comercializado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>