Salesforce/main/default/objects/Producto_Auditado__c/fields/Descarte__c.field-meta.xml
<CustomField>
    <fullName>Descarte__c</fullName>
    <label>Descarte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>