Salesforce/main/default/objects/Producto_Auditado__c/fields/Diferencia_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Descarte__c</fullName>
    <formula>( Comercializado__c +  Uso_Propio__c +  Descarte_Cliente__c ) -  Sem_Aprovada_Verificada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia Descarte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>