Salesforce/main/default/objects/Producto_Auditado__c/fields/Observacion__c.field-meta.xml
<CustomField>
    <fullName>Observacion__c</fullName>
    <label>Observação</label>
    <length>144</length>
    <type>Text</type>
</CustomField>