Salesforce/main/default/objects/Producto_Auditado__c/fields/Plano_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano de Auditoria</label>
    <referenceTo>Plano_de_Auditoria__c</referenceTo>
    <relationshipLabel>Productos Auditados</relationshipLabel>
    <relationshipName>Productos_Auditados</relationshipName>
    <type>Lookup</type>
</CustomField>