Salesforce/main/default/objects/Producto_Auditado__c/fields/Productividad__c.field-meta.xml
<CustomField>
    <fullName>Productividad__c</fullName>
    <formula>IF(OR(ISNULL(Area_Plantada__c),Area_Plantada__c=0) , Sem_Bruta__c, Sem_Bruta__c/Area_Plantada__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Productividade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>