Salesforce/main/default/objects/Producto_Auditado__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos Auditados</relationshipLabel>
    <relationshipName>Productos_Auditados</relationshipName>
    <type>Lookup</type>
</CustomField>