Salesforce/main/default/objects/Producto_Auditado__c/fields/Salir_de_la_Visita__c.field-meta.xml
<CustomField>
    <fullName>Salir_de_la_Visita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salir de la Visita</label>
    <type>Checkbox</type>
</CustomField>