Salesforce/main/default/objects/Producto_Auditado__c/fields/Sem_Aprobada__c.field-meta.xml
<CustomField>
    <fullName>Sem_Aprobada__c</fullName>
    <label>Sem. Aprovada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>