Salesforce/main/default/objects/Producto_Auditado__c/fields/Sem_Beneficiada__c.field-meta.xml
<CustomField>
    <fullName>Sem_Beneficiada__c</fullName>
    <label>Sem. Beneficiada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>