Salesforce/main/default/objects/Producto_Auditado__c/fields/Sem_Bruta__c.field-meta.xml
<CustomField>
    <fullName>Sem_Bruta__c</fullName>
    <label>Sem. Bruta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>