Salesforce/main/default/objects/Producto_Auditado__c/fields/Sem_Comercializada__c.field-meta.xml
<CustomField>
    <fullName>Sem_Comercializada__c</fullName>
    <label>Sem. Comercializada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>