Salesforce/main/default/objects/Producto_Auditado__c/fields/Sem_Uso_Propio__c.field-meta.xml
<CustomField>
    <fullName>Sem_Uso_Propio__c</fullName>
    <label>Sem. Uso Propio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>