Salesforce/main/default/objects/Producto_Auditado__c/fields/Uso_Propio__c.field-meta.xml
<CustomField>
    <fullName>Uso_Propio__c</fullName>
    <label>Uso Propio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>