Salesforce/main/default/objects/Producto_Auditado__c/fields/variedadeXcategoriaXsafra__c.field-meta.xml
<CustomField>
    <fullName>variedadeXcategoriaXsafra__c</fullName>
    <label>variedadeXcategoriaXsafra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>